資源ごみポリゴンの追加

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <!--    <label for="cbNinkagai" id="lblNinkagai">認可外</label>
                     <input type="checkbox" name="cbNinkagai" id="cbNinkagai" checked="checked">
 -->
-                    <label for="cbKindergarten" id="lblKindergarten">資源ごみ</label>
-                    <input type="checkbox" name="cbKindergarten" id="cbKindergarten" checked="checked">
+                    <label for="cbRecyclableWaste" id="lblRecyclableWaste">資源ごみ</label>
+                    <input type="checkbox" name="cbRecyclableWaste" id="cbRecyclableWaste">
 
                     <label for="cbElementarySchool" id="lblElementarySchool">燃えるごみ</label>
                     <input type="checkbox" name="cbElementarySchool" id="cbElementarySchool">
