免責事項 修正

--- a/help.html
+++ b/help.html
@@ -10,7 +10,7 @@
 <P class="c5"><SPAN class="c1">注意事項及び免責事項</SPAN></P>
 <P class="c0"><SPAN class="c1"></SPAN></P>
 <P class="c2"><SPAN 
-class="c1">「（サイト名）」（以下、当サイトとする）は、立正大学の一部学生（以下、管理者とする）が管理、運営しています。当サイトを利用される場合は、ここに記載した条件に準拠頂くものとします。当サイトをご利用いただいた時点で、以下利用条件の全てに同意頂いたものとさせて頂きます。</SPAN></P>
+class="c1">「クマリサ」（以下、当サイトとする）は、立正大学の一部学生（以下、管理者とする）が管理、運営しています。当サイトを利用される場合は、ここに記載した条件に準拠頂くものとします。当サイトをご利用いただいた時点で、以下利用条件の全てに同意頂いたものとさせて頂きます。</SPAN></P>
 <P class="c2 c4"><SPAN 
 class="c1">１．当サイトは、ご利用者様の便宜に供する為のものであり、ご利用者様自身の責任において利用いただくことができるものとします。</SPAN></P>
 <P class="c2 c6"><SPAN 
